[tool.poetry]
name = "wgcf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
pytz = "^2019.3"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
