[tool.poetry]
name = "wgcf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
rope = "^0.14.0"
pyinstaller = "^3.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
